# qingyuan-new-life

./: .gitignore  README.md
backend/: .env.example  README.md  nohup.out  pyproject.toml
backend/scripts/: generate-env-example.sh
backend/src/: main.py
backend/src/core/: config.py  database.py  lifespan.py  task_broker.py  worker_settings.py
backend/src/modules/auth/: router.py  schemas.py  service.py
backend/src/shared/models/: user_models.py  users.py
qyxs_frontend_hbuilderx/: pages.json
qyxs_frontend_hbuilderx/api/: admin.js  auth.js  request.js
qyxs_frontend_hbuilderx/store/: user.js
