[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cos-python-sdk-v5>=1.9.38",
    "fastapi>=0.119.0",
    "pydantic>=2.12.2",
    "sqlalchemy>=2.0.44",
    "tencentcloud-sdk-python-sts>=3.0.1459",
    "uvicorn>=0.37.0",
]
